# wallpaperctl

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/wallpaperctl/: __init__.py  __main__.py  app.py  cli.py  config.py  context.py  dbus_session.py  defaults.toml  lock.py  notify.py  util.py
src/wallpaperctl/assets/: __init__.py
src/wallpaperctl/data/: __init__.py
src/wallpaperctl/data/themes/: README.md
src/wallpaperctl/data/themes/FlatColor/: index.theme
src/wallpaperctl/data/wallust/: README.md  wallust.toml
src/wallpaperctl/data/wallust/scripts/: brighten-kitty-theme.py  generate-wallust-theme.py  wallust-muttrc.py
src/wallpaperctl/data/wallust/templates/: awesome-colors.lua  colors-btop.theme  colors-kitty.conf  colors-weechat.conf  colors.css  (+14 more)
src/wallpaperctl/detect/: __init__.py  desktop.py  tools.py
src/wallpaperctl/maint/: __init__.py  cleanup.py  reload_wm.py  verify.py
src/wallpaperctl/set/: __init__.py  base.py  cinnamon.py  fallback.py  hyprland.py  noctalia.py  plasma.py  runner.py  xfce.py
src/wallpaperctl/setup/: __init__.py  bootstrap.py  deps.py  packages.py  runner.py  themes_bootstrap.py  wallust_bootstrap.py
src/wallpaperctl/sources/: __init__.py  cache_mgr.py  dedup.py  fetch.py  local.py  optimize.py  providers.py  undup.py
src/wallpaperctl/theme/: __init__.py  base.py  cinnamon_theme.py  dynamic_icons.py  emacs.py  gtk_theme.py  homeassistant.py  notifications.py  nwg_look.py  openrgb.py  palette.py  runner.py  steam.py  wallust.py  window_manager.py  xresources.py
tests/: test_cache_mgr.py  test_config.py  test_dbus_session.py  test_dedup.py  test_detect.py  test_maint.py  test_notify.py  test_optimize.py  test_plasma_lockscreen.py  test_providers.py  test_setup.py  test_undup.py  test_xfce_setter.py
(+3 files in other folders)
