[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wallpaperctl"
version = "0.1.0"
description = "Cross-platform wallpaper + theme controller for Linux, OpenBSD, and FreeBSD"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Emiel Kollof", email = "emiel@kollof.nl" },
]

keywords = ["wallpaper", "pywal", "wallust", "hyprland", "plasma", "desktop"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Desktop Environment",
]
dependencies = [
  "httpx>=0.27",
  "Pillow>=10.0",
  "imagehash>=4.3",
  "jeepney>=0.8",
]



[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
wallpaperctl = "wallpaperctl.cli:main"
wallpaper = "wallpaperctl.cli:main"

[project.urls]
Homepage = "https://github.com/ekollof/wallpaperctl"
Repository = "https://github.com/ekollof/wallpaperctl"

[tool.hatch.build.targets.wheel]
packages = ["src/wallpaperctl"]

[tool.hatch.build.targets.wheel.force-include]
"src/wallpaperctl/defaults.toml" = "wallpaperctl/defaults.toml"
"src/wallpaperctl/assets" = "wallpaperctl/assets"



[tool.hatch.build.targets.sdist]
include = [
  "src/wallpaperctl",
  "README.md",
  "pyproject.toml",
]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
